Implement remarks from review